# RustyShareX

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs  page.html  types.rs
src/assets/: page.html
