[package]
name = "sharex"
version = "0.1.0"
authors = ["Conner ZargorNET"]
license = "MIT"
repository = "https://github.com/ZargorNET/RustyShareX"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
handlebars = "3.5.5"
mongodb = { version = "2.0.0-alpha.1", features = ["async-std-runtime"], default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
anyhow = "1.0"
bson = "1.2.2"
futures = "0.3"
rand = "0.8.3"
infer = { version = "0.3", default-features = false }
pretty_env_logger = "0.4"
log = "0.4"
regex = "1"
lazy_static = "1.4.0"